update main page

--- a/index.html
+++ b/index.html
@@ -22,10 +22,20 @@
         <div class="content">
             <h1>Welcome</h1>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Welcome to Omakase Oahu, your gateway to the most unique and personalized experiences on the island of Oahu. We specialize in custom tours tailored to your interests—whether you're looking for the best surf spots, hidden local gems, or must-see attractions. Our team knows the island like no one else, ensuring you get an authentic and unforgettable experience every time.
+
+                オマカセ・オアフへようこそ。オアフ島でしか体験できない、あなたにぴったりのカスタマイズツアーをご提供します。サーフィンスポットや隠れた名所、地元のおすすめスポットなど、あなたの興味に合わせてツアーをデザイン。私たちのガイドは島の隅々まで知り尽くしており、どんな時でも本物の、忘れられない体験をお届けします。
             </p>
             <p>
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                At Omakase Oahu, we pride ourselves on offering tours that are flexible, affordable, and completely personal. Whether you're visiting for the first time or are a returning local, we'll craft an itinerary that suits your preferences. From surf competitions and local events to peaceful beaches and scenic hikes, we know exactly when and where to take you for the most memorable experience.
+
+                オマカセ・オアフでは、柔軟で手頃な価格、そして個別のニーズに応じたツアーを提供しています。初めての方も、何度も訪れている方も、あなたに合わせたオーダーメイドのプランを作成します。サーフィン大会やローカルイベント、静かなビーチや絶景ハイキングなど、あなたにぴったりのタイミングとスポットをご案内します。
+            </p>
+
+            <p>
+                With Omakase Oahu, you won’t just follow the crowd—you’ll discover Oahu like a local. Our expert guides are passionate about sharing the island's culture, history, and beauty in a way that’s personal and unique to you. We’re excited to show you the hidden treasures of this paradise, making your time on Oahu truly unforgettable.
+
+                オマカセ・オアフでは、観光地だけではなく、地元のようにオアフを深く知ることができます。私たちのガイドは、島の文化や歴史、そして美しい風景を、あなたにしかできない方法でご紹介することに情熱を注いでいます。この楽園の隠れた魅力をお見せできることを楽しみにしており、オアフでのひとときを忘れられないものにします。
             </p>
         </div>
     </div>
