--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
     </title>
 <body>
     <div class="logo-container">
-        <img src="assets/small-logo.png" alt="Small Logo" class="small-logo">
-        <img src="assets/text-logo.png" alt="Text Logo" class="text-logo">
+        <img src="assets/header.png" alt="Omakase Tours Logo" class="header-logo">
     </div>
 
     <nav class="navbar">
         <a href="index.html" class="active">About</a>
         <a href="contact.html">Contact</a>
     </nav>
-
     <div class="main">
         <div class="content">
             <h1>Welcome</h1>
