--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
     </title>
 <body>
     <div class="logo-container">
-        <img src="assets/header.png" alt="Omakase Tours Logo" class="header-logo">
+        <img
+            src="assets/small-logo.png"
+            alt="Small Logo"
+            class="small-logo"
+        />
+        <img src="assets/text-logo.png" alt="Text Logo" class="text-logo" />
+
     </div>
 
     <nav class="navbar">
