--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-        <link rel="stylesheet" href="css/index.css" />
+        <link rel="stylesheet" href="css/contact.css" />
         <title>Contact - Omakase Tours</title>
     </head>
     <body>
